# Campus_HR_b

./: .env.example  .gitignore  CampusHire.Arch.docx  README.md  VM_OPERATIONS.md  docker-compose.yml
.github/workflows/: deploy-backend.yml
docs/openapi/: README.md
nginx/: nginx.conf
scripts/: deploy.sh  init-databases.sh  init-databases.sql  seed-coordinator.py  seed-coordinator.sql  seed-dev-data.py  smoke_test.py
services/application-service/: Dockerfile  requirements.txt
services/application-service/app/: config.py  main.py  models.py  schemas.py
services/application-service/app/api/: applications.py
services/application-service/app/services/: application_service.py
services/communications-service/: Dockerfile  requirements.txt
services/communications-service/app/: config.py  database.py  main.py  models.py  schemas.py
services/identity-service/: Dockerfile  alembic.ini  requirements.txt
services/identity-service/alembic/: env.py
services/identity-service/app/: config.py  main.py  models.py  schemas.py
services/opportunity-service/: Dockerfile  requirements.txt
services/opportunity-service/app/: config.py  main.py  models.py  schemas.py
shared/campushire-common/: pyproject.toml
shared/campushire-common/campushire_common/: __init__.py  auth_deps.py  enums.py  jwt.py  logging.py
shared/campushire-events/: pyproject.toml
shared/campushire-events/campushire_events/: __init__.py  broker.py  schemas.py
shared/campushire-storage/: pyproject.toml
shared/campushire-storage/campushire_storage/: __init__.py  backends.py
(+7 files in other folders)
