[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campushire-common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt==4.0.1",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "fastapi>=0.110",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["campushire_common*"]
