[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campushire-events"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aio-pika>=9.4",
    "campushire-common",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["campushire_events*"]
