[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campushire-storage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "azure-storage-blob>=12.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["campushire_storage*"]
